cors-proxy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cors-proxy
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cors-proxy
